# learning-opengl

./: .gitignore  CMakeLists.txt  README.md
res/shaders/: Basic.shader
src/: main.cc
